# AutoDifferentiation_DualNumbers

./: .gitignore  .readthedocs.yml  README.md  dual_autodiff.ipynb  pyproject.toml  setup.py
docs/docs/: benchmark_results.pkl  dual_autodiff.ipynb
docs/docs/source/: conf.py  dual_autodiff.rst  index.rst  modules.rst
dual_autodiff/: dual.c  version.c
dual_autodiff_x/: pyproject.toml  setup.py
dual_autodiff_x/dual_autodiff_cython/: __init__.py  dual.c  dual.pyx  version.c  version.pyx
dual_venv/: pyvenv.cfg
dual_venv_two/: pyvenv.cfg
tests/: README.md
